# k8s_sva_schulung

./: .gitignore  README.md
.config/: kubeconfig.yaml
.github/workflows/: docker-image.yml
certificates/: ca_cert.crt  ca_cert.pem  ca_key.pem  client_cert.pem  client_csr.pem  client_key.pem  generate.sh  server_csr.pem  server_key.pem
charts/cert-provider/: README.md
charts/cert-provider/templates/: issuer.yml
charts/rust-server/: Chart.yaml  values.yml
charts/rust-server/templates/: certificate.yml  deployment.yml  secret.yaml  service.yml
charts/rust-server/tmp/: cert  coded_cert  coded_key  key
charts/vue-app/: Chart.yaml  values.yml
charts/vue-app/templates/: deployment.yml  service.yml
rust-server/: Cargo.toml  Dockerfile  README.md  build.sh
rust-server/files/: server_cert.pem  server_key.pem
rust-server/src/: generator.rs  main.rs
rust-server/src/archive/: server.rs
rust-server/src/generator/: words.rs
vue-app/: Dockerfile  README.md  build.sh  entrypoint.sh  index.html  package-lock.json  package.json
vue-app/src/: App.vue
vue-app/src/components/: GenerateItem.vue  TitleItem.vue  WordItem.vue
