[package]
name = "rust_app"
description = "Generator for 5-letter words in English for people stuck playing Wordle" 
version = "0.1.0"
edition = "2021"
authors = ["Dave Canton"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
tide-rustls = "0.3.0"
http-types = "2.12.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.2"